--- a/code_latex_desc/particle_in_a_box_description.tex
+++ b/code_latex_desc/particle_in_a_box_description.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{amsart}
 \usepackage{geometry} % see geometry.pdf on how to lay out the page. There's lots.
 \usepackage{hyperref}
+\usepackage{graphicx}
 \geometry{a4paper} % or letter or a5paper or ... etc
 
 \title{Particle in a Box Simulation}
@@ -42,12 +43,61 @@ The pressure the gas exerts on the walls was calculated each time a particle pas
 
 $$ P =  \frac{m_p v^2}{l^2}   $$
 
-Each pressure event is recorded in a vector whose average is found and outputted at the end of the simulation.  In general, the simulated pressure is within a factor of a few of $P = nkT$ which is a fine result given the periodic boundary conditions contributing a factor of 2, the low resolution, and the intrinsic scatter in the initial conditions.
+Each pressure event is recorded in a vector whose average is found and outputted at the end of the simulation.  In general, the simulated pressure is within a factor of a few of $P = nkT$ which is a fine result given the periodic boundary conditions contributing a factor of 2 and the intrinsic scatter in the initial conditions.  To account for this, I scale the simulated pressure by this value and get excellent agreement with the ideal gas law.
 
 \subsection{Algorithm}
 
 The code, written in C++, was structured around two nested for loops.  During a given time step, the first loop iterated over each particle.  For each particle $i$, the then code looped over every other particle $j$ to see if the two collided.  If they collided according to the criterion given above, their velocities were updated while conserving energy and momentum.  After the loop over every other particle ended, the code checked to see if the particle was still within the bounds of the box and applied periodic boundary conditions if it was not.  At the end of each step for particle $i$, its position was updated by $\vec{x_i'} = \vec{x} + \Delta t \vec{v}$.  Throughout the execution, the initial and final positions and velocities were stored for future output into a text file.  The full code can be found at \href{https://github.com/dflemin3/boxSim}{https://github.com/dflemin3/boxSim}.
 
 \section{Simulation Velocity and Energy Distributions}
+
+\subsection{a}
+
+As derived on the attached sheet (see Fleming 1), the 2D Maxwellian distributions for velocity and energy are 
+
+$$ \frac{dN}{dv} = \frac{N m}{k_b T} v e^{\frac{-m v^2}{2 k_b T}} $$
+
+and
+
+$$ \frac{dN}{dE} = \frac{N}{k_b T}  e^{\frac{-E}{k_b T}} $$
+
+respectively.
+
+\subsection{b}
+
+After running 10 simulations for a sufficient length of time, the velocity and energy distributions reached a steady state.  For both velocity $v$ and energy $E$, the average histogram of the ten simulations for $v$ and $E$ at the initial and final states of the simulation are shown in Figures 1 and 2 over plotted with the theoretical expectation discussed above in $2.a$.  As shown in the figures, there is good agreement between the simulation results and theory.
+
+%Show Vel Dist
+\begin{figure}[h!]
+  \centering
+    \includegraphics[width=1.0\textwidth]{vel_dist.eps}
+    \caption{Simulated velocity distribution compared with theory.}
+\end{figure}
+
+%Show E Dist
+\begin{figure}[h!]
+  \centering
+    \includegraphics[width=1.0\textwidth]{energy_dist.eps}
+    \caption{Simulated energy distribution compared with theory.}
+\end{figure}
+
+\subsection{c}
+
+For one set of ten simulations, I made half of the particle masses 10 times larger.  The average histograms of $v$ and $E$ of the simulations are shown in Figures 3 and 4.  For the velocity distributions, it appears like the velocity distribution for the simulation with half of the particles being more massive is composed of two Maxwellians with a lower peak velocity than the standard simulation's distribution.  The mass dependence in $\frac{dN}{dv}$ causes a distribution to become tighter and centered around lower velocity values at a given temperature.  Since the temperature of the gas determines its energy and $E = \frac{1}{2}mv^2$, the more massive the particle, the slower it is.  Therefore it makes sense that the simulation with a higher average particle mass would have a tighter peak and at a lower velocity as is observed.  The two Maxwellian bumps in the distribution is likely due to the more massive particles kicking the lower mass particles to high velocity giving rise to the higher velocity bump.  For the energy distribution shown in Figure 4, we see that the two simulations are effectively identical.  This is because $\frac{dN}{dE}$ has no mass dependence as the temperature of the gas specifies the shape of the distribution.  The results in more massive particles moving more slowly and lighter particles moving faster at the same temperature to produce the same distribution shape.
+
+%Show comp Vel Dist
+\begin{figure}[h!]
+  \centering
+    \includegraphics[width=1.0\textwidth]{vel_comp.eps}
+    \caption{Comparison of the velocity distributions for all particle masses being $m_p$ (green) and for half being $10m_p$ (blue).}
+\end{figure}
+
+%Show comp energy Dist
+\begin{figure}[h!]
+  \centering
+    \includegraphics[width=1.0\textwidth]{energy_comp.eps}
+    \caption{Comparison of the energy distributions for all particle masses being $m_p$ (green) and for half being $10m_p$ (blue).}
+\end{figure}
+
 
 \end{document}
